fixed hover styling on mobile devices

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -60,6 +60,10 @@
   .Entry-drag-handle, .Entry {
     cursor: pointer;
   }
+
+  .Entry:hover {
+    background-color: transparent;
+  }
 }
 
 
